# springer_scrapper

./: .dockerignore  .env.example  .gitattributes  .gitignore  README.md  articles.txt  articles_2016-2017.json  articles_2020-2022.json  db.sqlite3-shm  db.sqlite3-wal  db.txt  docker-run.sh  main.py  prompt.txt  pyproject.toml  run.sh  start.txt  suitable 2016 - 2017.md  test.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
migrations/models/: 1_20260324223345_None.py
requirements/: pyproject.toml  pyrightconfig.json
scripts/: create_admin.py  flatten_original.py  migrate.py
src/: _compat.py  app.py  config.py  driver.py
src/admin/: models.py  provider.py
src/agent/: ai_executor.py
src/agent/openai/: __init__.py  client.py
src/agent/prompts/: prompt.txt
src/auth/: config.py  deps.py  schemas.py  security.py  service.py  tokens.py
src/db/: __init__.py  check.py  config.py  db_service.py
src/db/models/: __init__.py  artical_match.py  article.py  authorization.py  avatar.py  receipt.py  request.py  result_request.py  user.py
src/interface/: __init__.py  base.py
src/interface/openai/: __init__.py
src/routes/: __init__.py  ai_test.py  article_search.py  auth.py  pdf.py
src/scrapper/: chrome_factory.py
src/scrapper/springer/: scrapping.py
src/scrapper/utils/: create_url.py
src/services/: analysis_pipeline.py  article_db_service.py  article_search_service.py  pdf_service.py  status_messages.py
src/springer/: scrapping_service.py
src/springer/utils/: create_article_card.py
