[project]
name = "scrapper-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.1.0",
    "numpy>=2.4.3",
    "selenium>=4.41.0",
    "selenium-stealth>=1.0.6",
    "types-selenium>=3.141.9",
    "yarl>=1.23.0",
]
