[project]
name = "scrapper-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "python-dotenv>=1.1.0",
    "numpy>=2.4.3",
    "selenium>=4.41.0",
    "selenium-stealth>=1.0.6",
    "types-selenium>=3.141.9",
    "yarl>=1.23.0",
    "openai>=1.0.0",
    # Admin panel
    "fastapi-admin>=1.0.4",
    "tortoise-orm>=0.21.0",
    # PostgreSQL async driver (used when DATABASE_URL points to postgres://)
    "asyncpg>=0.30.0",
    # Auth: JWT + password hashing
    "PyJWT>=2.9.0",
    "passlib[bcrypt]>=1.7.4",
    "fakeredis>=2.26.0",
    "aiofiles>=24.0.0",
    "python-multipart>=0.0.18",
    # distutils shim for aioredis (removed in Python 3.12+)
    "setuptools>=75.0.0",
    # Database migrations (Tortoise ORM)
    "aerich>=0.7.0",
]

[tool.aerich]
tortoise_orm = "src.db.config.TORTOISE_CONFIG"
location = "./migrations"
src_folder = "./."
